@@ -1,3 +1,13 @@
+1999-02-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* about.cc: Add #include <libintl.h>.
+	(_): Defined to use gettext.
+
+	* main.cc: Add #include <libintl.h>.
+	(_): Defined.
+
+	* Makefile.am (INCLUDES): Add -DLOCALEDIR=....
+
 1999-02-05  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* Makefile.am (data_DATA): Added.
